--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "next-themes": "^0.4.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "satori": "^0.12.0",
+    "satori": "^0.14.1",
+    "sharp": "^0.33.5",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
